# polymer_in_solvent_solubility_modeling

./: README.md  pyproject.toml  requirements.txt
polymer_in_solvent_solubility_modeling/: sol_umaps.csv  umap_plotting.ipynb
polymer_in_solvent_solubility_modeling/.ipynb_checkpoints/: umap_plotting-checkpoint.ipynb
